# smolink

./: .gitignore  AGENTS.md  ENGINEERING_PLAYBOOK.md  README.md  docker-compose.yml
backend/: .env.example  pyproject.toml
backend/alembic/: env.py
backend/app/: main.py
backend/app/core/: config.py
backend/app/db/: base.py  session.py
backend/tests/: test_config.py  test_db_session.py  test_health.py
docs/: backend-build-checklist.md  codebase-walkthrough.md
docs/superpowers/specs/: 2026-07-20-initial-data-model-design.md
